--- a/index.html
+++ b/index.html
@@ -47,9 +47,11 @@
       <footer>
         <p>
           This project was coded by
-          <a href="#" target="_blank">Amina Momodu</a> and is
-          <a href="#" target="_blank"> on GitHub</a> and
-          <a href="#" target="_blank">hosted on Netlify</a>
+          <a href="https://github.com/AminaMomodu">Amina Momodu</a> and is
+          <a href="https://github.com/AminaMomodu/index.html"> on GitHub</a> and
+          <a href="https://6647beef84ebc730f4d9f224--aminaindex.netlify.app/"
+            >hosted on Netlify</a
+          >
         </p>
       </footer>
     </div>
